--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
    <head>
       <meta charset="utf-8">
-      <title>渐变闪亮加载动画 - 刀客源码网</title>
+      <title>加载中...</title>
       <link rel="stylesheet" href="style.css">
    </head>
    <body>
